tests/positive/ownership_observe_access.safe
-- Test: ownership_observe_access
-- Description: Local observe via the .Access attribute.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.4.p101a:ef2d8fd1
-- Expected: ACCEPT

package ownership_Observe_Access

   type config is record
      rate : natural;


   type config_Ptr is access config;

   function read_With_Local_Observer
      Owner    : config_Ptr = new ((rate = 100) as config);
      Observer : access constant config = Owner.access;
      rate     : natural;

      rate = Observer.rate;



